# EBUS_simulator

./: .gitignore  Agents.md  DevelopmentStatus.md  Makefile  NextSessionHandoff.md  Plans.md  README.md  USER_GUIDE.md  codex_instructions_next_steps.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
3D_slicer_files/centerlines/: Centerline curve_1 (0).mrk.json  Network curve_1 (0).mrk.json  Network curve_1 (1).mrk.json  Network curve_1 (10).mrk.json  Network curve_1 (11).mrk.json  Network curve_1 (12).mrk.json  Network curve_1 (13).mrk.json  Network curve_1 (14).mrk.json  Network curve_1 (15).mrk.json  Network curve_1 (16).mrk.json  Network curve_1 (17).mrk.json  Network curve_1 (18).mrk.json  Network curve_1 (19).mrk.json  Network curve_1 (2).mrk.json  Network curve_1 (20).mrk.json  Network curve_1 (21).mrk.json  Network curve_1 (22).mrk.json  Network curve_1 (23).mrk.json  Network curve_1 (24).mrk.json  Network curve_1 (25).mrk.json  Network curve_1 (26).mrk.json  Network curve_1 (27).mrk.json  Network curve_1 (28).mrk.json  Network curve_1 (29).mrk.json  Network curve_1 (3).mrk.json  Network curve_1 (30).mrk.json  Network curve_1 (31).mrk.json  Network curve_1 (32).mrk.json  Network curve_1 (33).mrk.json  Network curve_1 (34).mrk.json  Network curve_1 (35).mrk.json  Network curve_1 (36).mrk.json  Network curve_1 (37).mrk.json  Network curve_1 (38).mrk.json  Network curve_1 (39).mrk.json  Network curve_1 (4).mrk.json  Network curve_1 (40).mrk.json  Network curve_1 (41).mrk.json  Network curve_1 (42).mrk.json  Network curve_1 (43).mrk.json  (+10 more)
3D_slicer_files/markups/: station_10r_node_a_contact.mrk.json  station_10r_node_a_target.mrk.json  station_10r_node_b_contact.mrk.json  station_10r_node_b_target.mrk.json  station_11l__node_a_contact.mrk.json  station_11l__node_a_target.mrk.json  station_11ri__node_a_contact.mrk.json  station_11ri__node_a_target.mrk.json  station_11rs_node_a_contact.mrk.json  station_11rs_node_a_target.mrk.json  station_11rs_node_b_contact.mrk.json  station_11rs_node_b_target.mrk.json  station_2L__node_a_contact.mrk.json  station_2L__node_a_target.mrk.json  station_2r__node_a_contact.mrk.json  station_2r__node_a_target.mrk.json  station_4l_node_a_contact.mrk.json  (+14 more)
EBUS_annotation_images/: instances_default.json
configs/: 3d_slicer_files.flagged_overrides.yaml  3d_slicer_files.yaml  render_profiles.yaml  video_references.yaml
model/: CT_segmentation_1.glb  CT_segmentation_2.glb  EBUS_bronchoscope.glb  EBUS_tip.glb  case_001.glb  case_001_segmentation.nrrd
reference/: manifest.yaml
reports/: _phase_a_station_4r_node_b.json  _phase_c_station_4r_node_b_physics.json  _smoke_station_4r_node_b_physics.json  ci_pose_report.json  ci_station_4r_node_b.json  pose_report.json  validation_report.json
scripts/: bootstrap.sh  generate_git_ingest.py
tests/: conftest.py  test_acoustic_properties.py  test_app.py  test_artifacts.py  test_consistency.py  test_loaders.py  test_physics_renderer.py  test_poses.py  test_reference_workflow.py  test_rendering.py  test_review.py  test_validator.py  test_web_case_export.py  test_web_navigation.py  test_web_volume_intersections.py
updated_build_plan/: AGENTS_codex_recommended.md  ebus_codex_rollout_plan.md  ebus_issue_tickets.md
web/: index.html  package-lock.json  package.json  playwright.config.ts
(+788 files in other folders)
