[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebus-simulator"
version = "0.1.0"
description = "Standalone linear EBUS simulator with localizer, physics, and review workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "nibabel>=5.3",
  "numpy>=2.2",
  "Pillow>=11.0",
  "PyYAML>=6.0",
  "scipy>=1.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]
ui = [
  "PySide6>=6.8",
]
web = [
  "fastapi>=0.115",
  "scikit-image>=0.26",
  "uvicorn[standard]>=0.32",
]

[project.scripts]
validate-case = "ebus_simulator.cli:main"
generate-poses = "ebus_simulator.pose_cli:main"
render-preset = "ebus_simulator.render_cli:main"
render-all-presets = "ebus_simulator.render_all_cli:main"
review-presets = "ebus_simulator.review_cli:main"
compare-review-bundles = "ebus_simulator.review_compare_cli:main"
launch-app = "ebus_simulator.app:main"
build-reference-library = "ebus_simulator.reference_cli:main"
summarize-reference-annotations = "ebus_simulator.annotation_cli:main"
export-web-case = "ebus_simulator.web_case_export:main"
launch-web-app = "ebus_simulator.web_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
